[gd_scene load_steps=4 format=3 uid="uid://d0k2poflbowa0"]

[ext_resource type="Script" path="res://action/action_manager.gd" id="1_bpbfp"]
[ext_resource type="PackedScene" uid="uid://b1yxhxgyqagug" path="res://action/ui/action_selection.tscn" id="2_oxkpl"]
[ext_resource type="Script" path="res://action/action_repository.gd" id="3_6141l"]

[node name="ActionManager" type="Node2D"]
script = ExtResource("1_bpbfp")

[node name="ActionSelection" parent="." instance=ExtResource("2_oxkpl")]
unique_name_in_owner = true
visible = false

[node name="Repository" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_6141l")

[connection signal="action_selected" from="ActionSelection" to="." method="_on_action_selected"]
